<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray_8f">

    <TextView
        android:id="@+id/currentcondition"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="3"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/currentcondition"/>

    <TextView
        android:id="@+id/nextcondition"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:text="@string/nextcondition"
        android:gravity="center_vertical"
        android:layout_below="@+id/currentcondition"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="298dp"
        android:layout_height="200dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="40sp"
        android:text="@string/countdown"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/currentcondition" />

    <View
        android:layout_width="10dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_toRightOf="@+id/countdown"/>

    <TextView
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignBottom="@+id/currentcondition"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/countdown" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/countdown" />

    <TextView
        android:layout_width="800dp"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="800dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignBottom="@id/nextcondition"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
