<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_8f">
    
    <TextView
        android:id="@+id/main_speed_text_suggest_currents_peed"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="15sp"
        android:text="@string/currentspeed"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/main_speed_text_suggest_speed"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="3"
        android:textSize="15sp"
        android:text="@string/advicespeed"
        android:gravity="center_vertical"
        android:layout_below="@+id/main_speed_text_suggest_currents_peed"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/main_speed_text_limit_speed"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="15sp"
        android:text="@string/maximumspeed"
        android:gravity="center_vertical"
        android:layout_below="@+id/main_speed_text_suggest_speed"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/main_speed_text_suggest_currents_peed"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/main_speed_text_suggest_speed"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignBottom="@+id/main_speed_text_limit_speed"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/main_speed_text_suggest_currents_peed" />


</RelativeLayout>
