<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/formerstation"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:text="前一站"
        android:gravity="center_vertical"/>
    <TextView
        android:id="@+id/simple_schedule_text_pre_station_wait_time"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:text="停靠时间:"
        android:layout_toRightOf="@id/formerstation"
        android:gravity="center_vertical"/>


    <TextView
        android:id="@+id/formerstationarrivaltime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/formerstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/formerstationmileage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/formerstation"
        android:layout_toEndOf="@+id/formerstationarrivaltime" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:text=""
        android:gravity="center_vertical"
        android:layout_below="@+id/formerstationarrivaltime"
        android:layout_alignParentLeft="true" >

    </LinearLayout>
    <LinearLayout
        android:id="@+id/nextstation"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:layout_below="@+id/formerstationarrivaltime"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/simple_schedule_text_current_station_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formerstationarrivaltime"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/simple_schedule_text_current_station_wait_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formerstationarrivaltime"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:text="停靠时间"/>
        <TextView
            android:id="@+id/simple_schedule_text_current_station_wait_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/formerstationarrivaltime"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/nextstationarrivaltime"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/nextstation"/>

        <TextView
        android:id="@+id/nextstationtrainplan"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/trainplan"
        android:layout_below="@+id/nextstation"
        android:layout_toStartOf="@+id/nextstationmileage" />

    <TextView
        android:id="@+id/nextstationmileage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/nextstation"
        android:layout_alignEnd="@+id/nextstation" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_above="@+id/nextstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_alignBottom="@+id/nextstationarrivaltime" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/formerstationmileage" />

</RelativeLayout>
