<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/formerstation"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/formerstationarrivaltime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/formerstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/formerstationmileage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/formerstation"
        android:layout_toEndOf="@+id/formerstationarrivaltime" />


    <TextView
        android:id="@+id/nextstation"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_below="@+id/formerstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/nextstationarrivaltime"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/nextstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/nextstationtrainplan"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/trainplan"
        android:layout_below="@+id/nextstation"
        android:layout_toStartOf="@+id/nextstationmileage" />

    <TextView
        android:id="@+id/nextstationmileage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:textColor="@android:color/white"
        android:lines="2"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/nextstation"
        android:layout_alignEnd="@+id/nextstation" />

    <TextView
        android:id="@+id/secondstation"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_below="@+id/nextstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/secondstationarrivaltime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/secondstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/secondstationmileage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/secondstation"
        android:layout_toEndOf="@+id/secondstationarrivaltime" />

    <TextView
        android:id="@+id/thirdstation"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_below="@+id/secondstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/thirdstationarrivaltime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/thirdstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/thirdstationmileage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/thirdstation"
        android:layout_toEndOf="@+id/thirdstationarrivaltime" />

    <TextView
        android:id="@+id/fourthstation"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_below="@+id/thirdstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fourthstationarrivaltime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/arrivaltime"
        android:layout_below="@+id/fourthstation"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fourthstationmileage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient"
        android:textColor="@android:color/white"
        android:lines="1"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/mileage"
        android:layout_below="@+id/fourthstation"
        android:layout_toEndOf="@+id/fourthstationarrivaltime" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/formerstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@id/nextstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/secondstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/thirdstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_below="@+id/formerstationarrivaltime"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="600dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="600dp"
        android:background="@color/white"
        android:layout_alignEnd="@+id/formerstation" />




</RelativeLayout>
